# accuyork_2025_07

./: .clang-format  .gitignore  CMakeLists.txt  README.txt  conanfile.py  example_profile
bench/: CMakeLists.txt  bench.cpp
include/mandelbrot/: mandelbrot.hpp  v1.hpp  v2.hpp  v3.hpp  v4.hpp  v5.hpp  v6.hpp  v7.hpp  v8.hpp
src/: main.cpp
talk/: .gitignore  Makefile  README.md  main.tex  requirements.txt
test/: CMakeLists.txt  unit_mandelbrot.cpp
viewer/: CMakeLists.txt  main.cpp
